--- a/index.html
+++ b/index.html
@@ -1,3 +1,18 @@
-<div id="quiz"></div>
-<button id="submit">Submit Quiz</button>
-<div id="results"></div>
+<!DOCTYPE html>
+
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>JavaScript Fundamentals Quiz</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+
+  <body>
+        <div id="quiz"></div>
+        <button id="submit">Submit Quiz</button>
+        <div id="results"></div>
+    <script src="script.js"></script>
+  </body>
+</html> 
